--- a/.github/workflows/httkweb.yml
+++ b/.github/workflows/httkweb.yml
@@ -1,4 +1,4 @@
-name: httkweb
+name: Deploy httkweb contents to Pages
 
 on:
   push:
@@ -6,43 +6,50 @@ on:
   pull_request:
     branches: [ master ]
 
-jobs:
-  build:
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+
+jobs:
+  deploy:
+  
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+      
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout httk-web
-      uses: actions/checkout@v2
-      with:
-        path: web
-    - name: Checkout httk
-      uses: actions/checkout@v2
-      with:
-        repository: httk/httk
-        ref: devel
-        path: httk
-    - name: Install dependencies
-      run: |
-        sudo apt-get install python3 python3-docutils
-    - name: Generate website
-      run: |
-        export PYTHONPATH=$PWD/httk/src:$PYTHONPATH
-        export PATH=$PWD/httk/bin:$PATH
-        cd web
-        python3 ./publish.py
-        cd ..
-    - name: Publish website
-      run: |
-        cd web
-        git config user.name httkweb-github-action
-        git config user.email '<>'
-        git fetch origin gh-pages
-        git checkout gh-pages
-        mv docs ../gh-pages
-        mv .git ../gh-pages        
-        cd ../gh-pages
-        touch .nojekyll
-        git add .
-        git commit -m "Generated website contents $(date --rfc-2822)"
-        git push
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          path: web
+      - name: Checkout httk
+        uses: actions/checkout@v3
+        with:
+          repository: httk/httk
+          ref: devel
+          path: httk        
+      - name: Install dependencies
+        run: |
+          sudo apt-get install python3 python3-docutils
+      - name: Generate website
+        run: |
+          export PYTHONPATH=$PWD/httk/src:$PYTHONPATH
+          export PATH=$PWD/httk/bin:$PATH
+          cd web
+          python3 ./publish.py
+      - name: Setup Pages
+          uses: actions/configure-pages@v1        
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1        
+        with:
+          path: 'output'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@main
